// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExperimentsAndRuns renders experiments page 1`] = `
<div
  className="page"
>
  <MD2Tabs
    onSwitch={[Function]}
    selectedTab={0}
    tabs={
      Array [
        "",
        "",
      ]
    }
  />
  <EnhancedExperimentList
    history={Object {}}
    location=""
    match=""
    t={[Function]}
    toolbarProps={Object {}}
    updateBanner={[Function]}
    updateDialog={[MockFunction]}
    updateSnackbar={[MockFunction]}
    updateToolbar={[Function]}
    view={0}
  />
</div>
`;

exports[`ExperimentsAndRuns renders runs page 1`] = `
<div
  className="page"
>
  <MD2Tabs
    onSwitch={[Function]}
    selectedTab={1}
    tabs={
      Array [
        "",
        "",
      ]
    }
  />
  <EnhancedAllRunsList
    history={Object {}}
    location=""
    match=""
    t={[Function]}
    toolbarProps={Object {}}
    updateBanner={[Function]}
    updateDialog={[MockFunction]}
    updateSnackbar={[MockFunction]}
    updateToolbar={[Function]}
    view={1}
  />
</div>
`;
